deploymentfrom-privaterepo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springapp
  name: spring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - image: 172.31.36.229:8083/maven-web-app
        name: maven-web-app
