serivce.yml
# Cluster IP  Service
apiVersion: v1
kind: Service
metadata:  
  name: my-clusterip-service
spec:
  selector:    
    app: nginx
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
