wordpress-deployment-configSecret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:latest
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
---
# Node Port Service
apiVersion: v1
kind: Service
metadata:  
  name: wordpress-service
spec:
  selector:    
    app: wordpress
    tier: frontend
  type: NodePort
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
